# ft-diloco

./: .gitignore  BUILDLOG.md  Makefile  README.md  pyproject.toml
analysis/: dashboard.py  parse_logs.py  plot_comm.py  plot_convergence.py  plot_n32.py  plot_recovery.py  plot_storm.py  plot_wan.py  storm_gif.py  storm_status.py  svg.py  verify_numbers.py
chaos/: controller.py  faults.py  gen_schedule.py
configs/chaos/: m2_kill_rejoin.yaml  m3_storm_k120.yaml  m3_storm_k60.yaml  storm_n32.yaml  storm_n4.yaml  storm_n8.yaml
configs/model/: base124m.yaml  micro.yaml  tiny50m.yaml
configs/train/: m0_base.yaml  m0_tiny.yaml  m1_diloco.yaml  m4_cloud.yaml  storm_micro.yaml
docs/: findings-171.md
experiments/m0-tiny-s1337/: replica0.jsonl
experiments/m0-tiny-s1338/: replica0.jsonl
experiments/m0-tiny-s1339/: replica0.jsonl
experiments/m05-rejoin/: replica0.jsonl  replica1.jsonl
experiments/m1-h100-s1337/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m1-h200-s1337/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m1-h25-s1337/: netmon.jsonl  replica0.jsonl  replica1.jsonl
experiments/m1-h50-s1337/: netmon.jsonl  replica0.jsonl  replica1.jsonl
scripts/: launch_m2.sh  launch_m2_replica.sh  launch_storm_replica.sh  launch_worker.sh  netns_cluster.sh  record_gif.sh  run_m05_smoke.sh  run_m1_sweep.sh  run_m3_storm.sh  run_m4_cloud_w4.sh  run_m4_twomachine.sh  run_m4_wan.sh  run_storm.sh  start_recording.sh  supervisor.sh  supervisor_n.sh  w4.sh
src/ftdiloco/: ft.py  (+7 more)
tests/: test_chaos.py  test_data.py  test_metrics.py  test_model.py
(+81 files in other folders)
