[project]
name = "ftdiloco"
version = "0.1.0"
description = "Fault-tolerant DiLoCo: resilient low-bandwidth LLM training on commodity hardware"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7",
    "numpy>=1.26",
    "tiktoken>=0.6",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

# torchft is NOT listed here: it is installed editable from a pinned fork checkout
# on the training hosts (see docs/runbook.md). Pinned upstream commit recorded below.
# torchft-pin: TBD (set at M0.5)

[project.optional-dependencies]
prep = ["datasets>=2.19"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftdiloco"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
